--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -1,4 +1,4 @@
-<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+<div class="page-layout simple fullwidth" fxLayout="column">
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Buat Audience'"></page-content-header>
   <!-- / HEADER -->
@@ -103,7 +103,7 @@
           </div> -->
 
       <form [formGroup]="formFilter" autoComplete="off">
-        <div fxLayout="row wrap" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+        <div fxLayout="row wrap" fxLayoutAlign="space-between stretch" fxLayout.lt-md="column" class="pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
 
           <mat-form-field fxFlex="12%" class="is-light form-primary">
             <mat-select placeholder="National" formControlName="national">
@@ -163,12 +163,18 @@
     </div>
 
     <div class="p-0">
+      <div fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="10px" fxLayoutAlign="end center"
+        class="p-16 export">
+        <button mat-raised-button type="button" class="is-danger" (click)="importAudience()">
+          <mat-icon>arrow_downward</mat-icon> Import XLS
+        </button>
+      </div>
       <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator"></mat-progress-bar>
       <ngx-datatable class="material" [rows]="rows" [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56"
         [rowHeight]="'auto'" [reorderable]="reorderable" [selected]="selected" [selectionType]="formAudience.get('type').value !== 'pick-all' ? 'checkbox' : ''"
         [count]="pagination.total" [limit]="pagination.per_page" [externalPaging]="true" [selectAllRowsOnPage]="false"
         [externalSorting]="true" (page)="setPage($event)" [sorts]="[{prop: 'name', dir: 'asc'}]" (select)="onSelect($event)"
-        [rowIdentity]="getId" (sort)="onSort($event)">
+        [rowIdentity]="getId" (sort)="onSort($event)" fusePerfectScrollbar>
         <ngx-datatable-column [width]="68" *ngIf="formAudience.get('type').value !== 'pick-all'" [canAutoResize]="false"
           [sortable]="true" [draggable]="false" [resizeable]="false" [headerCheckboxable]="true">
           <!-- <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
