--- a/src/app/pages/user-management/paguyuban/index/paguyuban-index.component.html
+++ b/src/app/pages/user-management/paguyuban/index/paguyuban-index.component.html
@@ -83,7 +83,7 @@
       </form>
       <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows" [loadingIndicator]="loadingIndicator"
         [columnMode]="'force'" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
-        [reorderable]="reorderable" [selectionType]="'checkbox'" [selected]="selected" [count]="pagination.total"
+        [reorderable]="reorderable" [selectionType]="'checkbox'" [selected]="selected" [count]="pagination.total" [offset]="offsetPagination"
         [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)" (select)="onSelect($event)">
 
         <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
