missed return to current page

--- a/src/app/pages/user-management/admin-principal/index/admin-principal-index.component.html
+++ b/src/app/pages/user-management/admin-principal/index/admin-principal-index.component.html
@@ -2,7 +2,7 @@
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Daftar Admin'">
     <div class="button-row" fxLayout="row">
-      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/user-management','admin-principal','create']" [queryParams]="queryParams">
+      <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" [routerLink]="['/user-management','admin-principal','create']">
         <mat-icon>add</mat-icon>TAMBAH
       </button>
       <!-- <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" class="is-danger">HAPUS</button> -->
