--- a/src/app/pages/dte/schedule-program/import-coin/import-coin.component.scss
+++ b/src/app/pages/dte/schedule-program/import-coin/import-coin.component.scss
@@ -1,6 +1,6 @@
 @import "src/@fuse/scss/fuse";
 
-.scrumboard-card-dialog {
+.adjustment-coin-dialog {
   @include media-breakpoint("xs") {
     width: 100%;
   }
