--- a/src/app/pages/dte/schedule-program/import-coin/import-coin.component.html
+++ b/src/app/pages/dte/schedule-program/import-coin/import-coin.component.html
@@ -66,7 +66,7 @@
               {{ item.coin }}
             </td>
           </tr>
-          <tr *ngIf="!rows">
+          <tr *ngIf="rows.length === 0">
             <td style="text-align:center" colspan="6">
               Tidak ada file yang dipilih
             </td>
@@ -80,7 +80,7 @@
     <div class="p-16">
       <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px" fxLayoutGap.lt-md="10px"
         fxFlex="1 0 auto">
-        <button type="button" mat-raised-button color="primary" (click)="submit()" [disabled]="!files">Kirim</button>
+        <button type="button" mat-raised-button color="primary" (click)="submit()" [disabled]="!files || rows.length === 0">Kirim</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()" [disabled]="uploading">Batal</button>
       </div>
     </div>
