--- a/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.scss
+++ b/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.scss
@@ -3,12 +3,12 @@
     height: 210px;
     width: 410px;
     border-radius: 6px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     border: 2px solid white;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.35);
 
     &:hover {
-      border: 2px solid #BB130F;
+      border: 2px solid #bb130f;
       box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.35);
       box-sizing: border-box;
       height: 210px;
@@ -21,7 +21,7 @@
     height: 210px;
     width: 410px;
     border-radius: 6px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     padding: 12px 10px;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.35);
   }
@@ -30,10 +30,36 @@
     box-sizing: border-box;
     height: 210px;
     width: 410px;
-    border: 2px solid #BB130F;
+    border: 2px solid #bb130f;
     border-radius: 6px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.35);
+  }
+
+  .image-sku {
+    float: left;
+    font-size: 0;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 170px;
+    height: 170px;
+    margin: 10px 8px;
+  }
+
+  .image-sku img {
+    display: inline-block;
+    vertical-align: middle;
+    max-height: 100%;
+    max-width: 100%;
+  }
+
+  .image-sku:before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    height: 100%;
   }
 
   .banner-image-custom {
@@ -85,13 +111,13 @@
       text-shadow: none;
 
       &.red {
-        background-color: #BB130F;
-        color: white
+        background-color: #bb130f;
+        color: white;
       }
 
       &.white {
         background-color: white;
-        color: #BB130F;
+        color: #bb130f;
       }
     }
   }
@@ -126,13 +152,13 @@
       text-shadow: none;
 
       &.red {
-        background-color: #BB130F;
-        color: white
+        background-color: #bb130f;
+        color: white;
       }
 
       &.white {
         background-color: white;
-        color: #BB130F;
+        color: #bb130f;
       }
     }
   }
@@ -167,13 +193,13 @@
       text-shadow: none;
 
       &.red {
-        background-color: #BB130F;
-        color: white
+        background-color: #bb130f;
+        color: white;
       }
 
       &.white {
         background-color: white;
-        color: #BB130F;
+        color: #bb130f;
       }
     }
   }
@@ -208,13 +234,13 @@
       text-shadow: none;
 
       &.red {
-        background-color: #BB130F;
-        color: white
+        background-color: #bb130f;
+        color: white;
       }
 
       &.white {
         background-color: white;
-        color: #BB130F;
+        color: #bb130f;
       }
     }
   }
@@ -249,13 +275,13 @@
       text-shadow: none;
 
       &.red {
-        background-color: #BB130F;
-        color: white
+        background-color: #bb130f;
+        color: white;
       }
 
       &.white {
         background-color: white;
-        color: #BB130F;
+        color: #bb130f;
       }
     }
   }
@@ -272,7 +298,7 @@
   .red-circle-button {
     height: 12px;
     width: 12px;
-    background-color: #BB130F;
+    background-color: #bb130f;
     border-radius: 36px;
     margin: 12px 12px 12px 0;
   }
@@ -293,7 +319,8 @@
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background: url('../../../../../assets/images/ayo/loading.svg') center no-repeat;
+    background: url("../../../../../assets/images/ayo/loading.svg") center
+      no-repeat;
     background-color: rgba(255, 255, 255, 0.5);
   }
 }
