fixing centering image

--- a/src/app/pages/sku-management/product/edit/product-edit.component.html
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.html
@@ -127,7 +127,7 @@
                     <mat-icon style="cursor: pointer;" (click)="removeImage()">cancel_outline</mat-icon>
                   </div>
                   <!-- <div class="previewIcon" [ngfBackground]="files"></div> -->
-                  <div id="imageConverted" class="image-sku">
+                  <div id="imageConverted" #screen class="image-sku">
                     <img id="image" [src]='imageSku'/>
                   </div>
                 </div>
