--- a/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
+++ b/src/app/pages/dte/schedule-program/index/schedule-program-index.component.html
@@ -119,6 +119,7 @@
           </ng-template>
         </ngx-datatable-column>
       </ngx-datatable>
+      <a #downloadLink></a>
     </div>
   </div>
 </div>
