--- a/src/app/pages/dte/schedule-program/edit/schedule-program-edit.component.html
+++ b/src/app/pages/dte/schedule-program/edit/schedule-program-edit.component.html
@@ -4,20 +4,20 @@
   <!-- / HEADER -->
 
   <div class="content p-24" *ngIf="!onLoad">
-    <div class="ayo-main-wrapper mat-white-bg" fxLayout="column" fusePerfectScrollbar>
+    <div class="ayo-main-wrapper mat-white-bg p-0" fxLayout="column" fusePerfectScrollbar>
       <form autocomplete="off" [formGroup]="formSchedule">
-        <div fxLayout="row" fxLayoutAlign="space-between center">
-          <h2 class="">Ubah Pengatur Jadwal Trade Program</h2>
+        <div class="px-24" fxLayout="row" fxLayoutAlign="space-between center">
+          <h2>Ubah Pengatur Jadwal Trade Program</h2>
         </div>
         <div class="ayo-middle py-24" fxLayout="column">
-          <div fxLayout="row">
+          <div fxLayout="row" class="px-24">
             <mat-form-field fxFlex="45" class="is-light form-primary">
               <input matInput type="text" placeholder="Nama Pengatur Jadwal Program Dagang" [value]="dataScheduler['name']"
                 name="name" disabled>
             </mat-form-field>
           </div>
 
-          <div fxLayout="row">
+          <div fxLayout="row" class="px-24">
             <mat-form-field fxFlex="45" class="is-light form-primary">
               <mat-select [value]="dataScheduler['trade_creator_id']" placeholder="Trade Program" name="trade_creator_id"
                 disabled>
@@ -26,7 +26,7 @@
             </mat-form-field>
           </div>
 
-          <div class="py-8" *ngIf="dataScheduler['audience']">
+          <div class="py-8 px-24" *ngIf="dataScheduler['audience']">
 
             <div fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
@@ -45,7 +45,7 @@
             </div>
           </div>
 
-          <div class="py-8">
+          <div class="py-8 px-24">
 
             <div fxLayout="row" fxLayoutAlign="start center">
               <h3 class="">
@@ -66,13 +66,11 @@
 
           <div class="py-24" formArrayName="task_templates" *ngFor="let item of formSchedule.get('task_templates')['controls']; let i = index;">
 
-            <div class="py-2" fxLayout="row" fxLayoutAlign="start center">
-              <h3 class="">
-                <strong>Template Tugas</strong>
-              </h3>
+            <div class="py-2 template-task" fxLayout="row" fxLayoutAlign="start center">
+              <h3 class="">Template Tugas</h3>
             </div>
             <div [formGroupName]="i">
-              <div fxLayout="row wrap" fxLayout.lt-md="column" class="pb-24" fxLayoutGap="25px" fxLayoutGap.lt-md="0px">
+              <div fxLayout="row wrap" fxLayout.lt-md="column" class="p-24" fxLayoutGap="25px" fxLayoutGap.lt-md="0px">
                 <mat-form-field fxFlex="45%" class="is-light form-primary">
                   <input matInput type="text" placeholder="Template Tugas" [value]="item.controls['task_template_name'].value" disabled>
                 </mat-form-field>
@@ -130,7 +128,7 @@
           </div>
         </div>
 
-        <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
+        <div class="confirm p-24" fxLayout="row" fxLayoutGap="20px">
           <!-- <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" fxFlex="20">
             REJECT
           </button> -->
