change color for development

--- a/src/app/main/toolbar/toolbar.component.html
+++ b/src/app/main/toolbar/toolbar.component.html
@@ -21,6 +21,12 @@
 
     </div>
 
+    <div fxFlex="1 0 auto" fxLayout="row" fxLayoutAlign="start center">
+
+      DEVELOPMENT
+
+    </div>
+
     <div class="" fxFlex="0 1 auto" fxLayout="row" fxLayoutAlign="start center">
 
       <button mat-button [matMenuTriggerFor]="userMenu" class="user-button">
