--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,94 +6,99 @@
   <li><span></span></li>
   <li><span></span></li>
 </ul>
-<div id="ayoLogin" fxLayout="row" fxLayoutAlign="center center">
-  <div class="lgn-container" fxFlex="420px" fxFlex.lt-md="80%">
-    <div class="lgn-box">
-      <div class="top">
-        <img src="assets/images/ayo/AYO_SRC_(Master).png" srcset="assets/images/ayo/AYO_SRC_(Master)@2x.png 2x" />
-        <div class="title">Masuk ke Akun Anda</div>
-      </div>
-      <div class="middle-form">
+<div id="ayoLogin" fxLayout="column" fxLayoutAlign="center center">
+  <div class="badge">
+    DEVELOPMENT
+  </div>
+  <div class="login-bg" fxLayout="row">
+    <div class="lgn-container" fxFlex="420px" fxFlex.lt-md="80%">
+      <div class="lgn-box">
+        <div class="top">
+          <img src="assets/images/ayo/AYO_SRC_(Master).png" srcset="assets/images/ayo/AYO_SRC_(Master)@2x.png 2x" />
+          <div class="title">Masuk ke Akun Anda</div>
+        </div>
+        <div class="middle-form">
 
-        <form name="form" [formGroup]="loginForm" (ngSubmit)="submit()">
+          <form name="form" [formGroup]="loginForm" (ngSubmit)="submit()">
 
-          <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-            <mat-form-field class="is-light form-primary">
-              <input matInput type="email" placeholder="Email / Username" formControlName="username">
-              <mat-error *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched ">
-                Email / Username harus diisi.
-              </mat-error>
-            </mat-form-field>
-          </div>
+            <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+              <mat-form-field class="is-light form-primary">
+                <input matInput type="email" placeholder="Email / Username" formControlName="username">
+                <mat-error *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched ">
+                  Email / Username harus diisi.
+                </mat-error>
+              </mat-form-field>
+            </div>
 
-          <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-            <mat-form-field class="is-light form-primary">
-              <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi">
-              <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi">
-              <button type="button" mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
-                <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
-                <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
+            <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+              <mat-form-field class="is-light form-primary">
+                <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi">
+                <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi">
+                <button type="button" mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
+                  <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
+                  <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
+                </button>
+                <mat-error *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched ">
+                  Kata Sandi harus diisi.
+                </mat-error>
+              </mat-form-field>
+            </div>
+
+            <div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+              <mat-checkbox class="remember-me red" [formControl]="rememberMe" aria-label="Remember Me">
+                Ingat Saya
+              </mat-checkbox>
+              <a class="forgot-password" [routerLink]="'/forgot-password'">
+                Lupa kata sandi?
+              </a>
+            </div>
+
+            <div class="login-button" fxLayout="row">
+              <button mat-raised-button aria-label="Login" type="submit" color="primary-red" [disabled]="submitting">
+                <ng-container *ngIf="submitting == false">
+                  Masuk
+                </ng-container>
+                <ng-container *ngIf="submitting == true">
+                  <mat-progress-spinner mode="indeterminate" diameter="32" style="margin:0 auto;"></mat-progress-spinner>
+                </ng-container>
               </button>
-              <mat-error *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched ">
-                Kata Sandi harus diisi.
-              </mat-error>
-            </mat-form-field>
-          </div>
+            </div>
+          </form>
 
-          <div class="remember-forgot-password" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
-            <mat-checkbox class="remember-me red" [formControl]="rememberMe" aria-label="Remember Me">
-              Ingat Saya
-            </mat-checkbox>
-            <a class="forgot-password" [routerLink]="'/forgot-password'">
-              Lupa kata sandi?
-            </a>
-          </div>
-
-          <div class="login-button" fxLayout="row">
-            <button mat-raised-button aria-label="Login" type="submit" color="primary-red" [disabled]="submitting">
-              <ng-container *ngIf="submitting == false">
-                Masuk
-              </ng-container>
-              <ng-container *ngIf="submitting == true">
-                <mat-progress-spinner mode="indeterminate" diameter="32" style="margin:0 auto;"></mat-progress-spinner>
-              </ng-container>
-            </button>
-          </div>
-        </form>
-
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="lgn-container text-container" fxShow fxHide.lt-md="true" fxHide.lg="false">
-    <h2>Selamat datang di</h2>
-    <h1>AYO SRC SAMPOERNA</h1>
+    <div class="lgn-container text-container" fxShow fxHide.lt-md="true" fxHide.lg="false">
+      <h2>Selamat datang di</h2>
+      <h1>AYO SRC SAMPOERNA</h1>
 
-    <div class="txt-ayo">Satu pintu untuk manajemen internal seluruh platform AYO SRC </div>
+      <div class="txt-ayo">Satu pintu untuk manajemen internal seluruh platform AYO SRC </div>
 
-    <div fxLayout="column">
-      <div fxLayout="row" fxLayoutAlign="start center">
-        <div fxFlex="10">
-          <mat-icon style="width: 43px;height: 43px;font-size: 43px;">check_circle_outline</mat-icon>
+      <div fxLayout="column">
+        <div fxLayout="row" fxLayoutAlign="start center">
+          <div fxFlex="10">
+            <mat-icon style="width: 43px;height: 43px;font-size: 43px;">check_circle_outline</mat-icon>
+          </div>
+          <div fxFlex="90">
+            <p>Kelola data pengguna platform AYO SRC</p>
+          </div>
         </div>
-        <div fxFlex="90">
-          <p>Kelola data pengguna platform AYO SRC</p>
+        <div fxLayout="row" fxLayoutAlign="start center">
+          <div fxFlex="10">
+            <mat-icon style="width: 43px;height: 43px;font-size: 43px;">check_circle_outline</mat-icon>
+          </div>
+          <div fxFlex="90">
+            <p>Buat dan bagikan misi kepada SRC sesuai trade program berjalan</p>
+          </div>
         </div>
-      </div>
-      <div fxLayout="row" fxLayoutAlign="start center">
-        <div fxFlex="10">
-          <mat-icon style="width: 43px;height: 43px;font-size: 43px;">check_circle_outline</mat-icon>
-        </div>
-        <div fxFlex="90">
-          <p>Buat dan bagikan misi kepada SRC sesuai trade program berjalan</p>
-        </div>
-      </div>
-      <div fxLayout="row" fxLayoutAlign="start center">
-        <div fxFlex="10">
-          <mat-icon style="width: 43px;height: 43px;font-size: 43px;">check_circle_outline</mat-icon>
-        </div>
-        <div fxFlex="90">
-          <p>Sebarkan spanduk online dan notifikasi kepada retailer maupun konsumen</p>
+        <div fxLayout="row" fxLayoutAlign="start center">
+          <div fxFlex="10">
+            <mat-icon style="width: 43px;height: 43px;font-size: 43px;">check_circle_outline</mat-icon>
+          </div>
+          <div fxFlex="90">
+            <p>Sebarkan spanduk online dan notifikasi kepada retailer maupun konsumen</p>
+          </div>
         </div>
       </div>
     </div>
