--- a/src/variable.scss
+++ b/src/variable.scss
@@ -5,8 +5,7 @@
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 $img-placeholder-background: transparent;
-$font-family-base: "Proxima Nova",
-sans-serif !default;
+$font-family-base: "Proxima Nova", sans-serif !default;
 $text-input-highlight-color-valid: #222d65;
 $text-input-highlight-color-invalid: #f44336;
 // Named Color Variables
@@ -16,5 +15,12 @@ $text-input-highlight-color-invalid: #f44336;
 // to match your app's branding. Ionic uses a Sass map of
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
-$colors: (primary-red: #DC1E2D, white: #fff, primary-green: #388E3C, primary-light-red:#F44336, light-red: #ed8e96, confirmation-button:#DC1E2D);
-$primary-red:#BB130F
+$colors: (
+  primary-red: #0964c2,
+  white: #fff,
+  primary-green: #388e3c,
+  primary-light-red: #f44336,
+  light-red: #ed8e96,
+  confirmation-button: #dc1e2d
+);
+$primary-red: #bb130f;
