--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,7 +14,7 @@
     <div class="lgn-container" fxFlex="420px" fxFlex.lt-md="80%">
       <div class="lgn-box">
         <div class="top">
-          <img src="assets/images/ayo/AYO_SRC_(Master).png" srcset="assets/images/ayo/AYO_SRC_(Master)@2x.png 2x" />
+          <img src="assets/images/ayo/icon/dev.png" srcset="assets/images/ayo/dev@2x.png 2x" />
           <div class="title">Masuk ke Akun Anda</div>
         </div>
         <div class="middle-form">
