--- a/src/app/pages/settings/support/support.component.html
+++ b/src/app/pages/settings/support/support.component.html
@@ -43,6 +43,17 @@
                 <div fxFlex="70" fxLayout="column">
                   <div class="text-bold">Melalui Whatsapp</div>
                   <div class="">0819-06000-234</div>
+                  <div class="text-bold pt-4" style="font-size: 65%">* Untuk area Jakarta dan sekitarnya</div>
+                </div>
+              </div>
+              <div class="rectangle p-24" fxLayout="row wrap" fxLayoutAlign="center center">
+                <div fxFlex="30">
+                  <img mat-list-icon src="assets/images/ayo/bantuan/whatsapp.png" srcset="assets/images/ayo/bantuan/whatsapp@2x.png 2x" />
+                </div>
+                <div fxFlex="70" fxLayout="column">
+                  <div class="text-bold">Melalui Whatsapp</div>
+                  <div class="">0811-06000-234</div>
+                  <div class="text-bold pt-4" style="font-size: 65%">* Untuk area Jawa Barat dan Jawa Tengah</div>
                 </div>
               </div>
             </div>
